# money_tracker

./: .gitignore  Cargo.toml  doit  flake.nix
migrations/2024-06-12-195327_create_bank/: up.sql
migrations/2024-06-12-195346_create_transaction/: down.sql  up.sql
src/: csv.rs  lib.rs  macros.rs  models.rs  schema.rs  types.rs
