[package]
name = "money_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "numeric", "extras"] }
dotenvy = "0.15"
chrono = { version = "0.4.38", features = ["serde"] }
bigdecimal = { version = "0.4.3", features = ["serde"] }
csv = "1.3.0"
serde = { version = "1.0.203", features = ["derive"] }
clap = { version = "4.5.7", features = ["derive"] }
